# dev-bind

./: .apps_tmp  .gitignore  .release-please-manifest.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FRAMEWORKS.md  README.md  TROUBLESHOOTING.md  apps.json  bind.txt  install.sh  install_apps.sh  release-please-config.json  renovate.json  skipScaffolding.md  test_all_apps.sh  test_frameworks.sh  test_upgrade.rs
.github/workflows/: release-please.yml
cli/: CHANGELOG.md  Cargo.toml
cli/src/: main.rs
cli/src/cmd/: add.rs  add_tests.rs  gui.rs  install.rs  list.rs  list_tests.rs  mod.rs  run.rs  start.rs  trust.rs
core/: CHANGELOG.md  Cargo.toml  test_rcgen.rs
core/src/: cert.rs  cert_tests.rs  config.rs  config_tests.rs  detect.rs  dns.rs  dns_tests.rs  hosts.rs  hosts_tests.rs  lib.rs  proxy.rs  proxy_tests.rs  runner.rs  runner_tests.rs  setup.rs  trust.rs
gui/: CHANGELOG.md  Cargo.toml  Dioxus.toml
gui/src/: main.rs  service.rs  utils.rs  utils_tests.rs
gui/src/components/: daemon.rs  dns.rs  footer.rs  help.rs  mappings.rs  mod.rs  security.rs
