[package]
name = "devbind-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
devbind-core = { path = "../core" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
dirs = "6.0.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
libc = "0.2.182"

[dev-dependencies]
tempfile = "3.25.0"
