[package]
name = "devbind-core"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.37", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
rustls = "0.23"
rcgen = { version = "0.14", features = ["x509-parser"] }
hyper-util = { version = "0.1.20", features = ["tokio", "server", "server-auto", "http1", "http2", "client", "client-legacy"] }
tokio-rustls = "0.26"
rustls-pki-types = "1.14.0"
tracing = "0.1.44"
http-body-util = "0.1.3"
tempfile = "3.25.0"
rsa = "0.9.10"
dashmap = "6"

[dev-dependencies]
tempfile = "=3.25.0"
