[package]
name = "devbind-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
devbind-core = { path = "../core" }
dioxus = { version = "0.5", features = ["desktop"] }
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
dirs = "6.0.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
open = "5.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.25.0"
